<resources>
    <string name="app_name">Easy ETSIIT</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="map_placeholder">This is where the map will be shown</string>
    <string name="map_title">Mapa de la ETSIIT</string>

    /*Títulos de actividad*/
    <string name="srch_route">Ruta</string>
    <string name="srch_info">Info QR</string>
    <string name="srch_staff">Busca Personal</string>
    <string name="depart_ia">Departamento de Inteligencia Artificial</string>
    <string name="depart_bd">Departamento de bases de datos</string>
    <string name="depart_sw">Departamento de software</string>

    /*Defaults*/
    <string name="default_description">Image description here</string>
    <string name="default_entendido">Entendido</string>
    <string name="default_atras">Atras</string>

    /*Mensajes de ayuda*/
    <string name="camera_help">Apunta la cámara a un código QR en la facultad para obtener información sobre una ruta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    /*texto de relleno*/
    <string name="jabad_nom">Nombre: Francisco Javier Abad</string>
    <string name="jabad_mail">Correo: jabad@ugr.es</string>
    <string name="jabad_office">Despacho: 203</string>
    <string name="jabad_inf">Imparte la asignatura de Metodología de la Programación</string>

    <string name="acid_nom">Nombre: Silvia Acid Carrillo</string>
    <string name="acid_mail">Correo: acid@decsai.ugr.es</string>
    <string name="acid_office">Despacho: 304</string>
    <string name="acid_inf">Imparte la asignatura de Metodología de la Programación</string>
</resources>